# ClutterHunter

./: AGENTS.md  ARCHITECTURE.md  README.md  TASK.md  TECHNICAL_REPORT.md  THIRD_PARTY_NOTICES.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
docs/: AnalyzerCore.md  Idea.md  LocalAgent.md  ProductPlan.md  References.md  ScannerSpike.md  Session01.md
e2e/: tauri.spec.ts
release/: PREREQUISITES.md  RELEASE_NOTES.md
scripts/: package-portable.ps1  tauri-hook.ps1  verify-portable.ps1
src/: AgentDock.test.tsx  AgentDock.tsx  AnalyzerWorkspace.test.tsx  AnalyzerWorkspace.tsx  App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/clutter-core/: Cargo.toml
src-tauri/crates/clutter-core/src/: analyzer.rs  arena.rs  backend.rs  lib.rs  ownership.rs  raw_snapshot.rs  scan.rs  traversal.rs  volume.rs
src-tauri/crates/clutter-protocol/: Cargo.toml
src-tauri/crates/clutter-protocol/src/: lib.rs
src-tauri/crates/clutter-scanner-helper/: Cargo.toml
src-tauri/crates/clutter-scanner-helper/src/: main.rs  raw_mft.rs
src-tauri/src/: commands.rs  lib.rs  main.rs
src/agent/: catalog.test.ts  catalog.ts  endpoint.test.ts  endpoint.ts  harness.live.test.ts  harness.test.ts  harness.ts  harnessCache.test.ts  harnessCache.ts  hoverAi.ts  index.ts  ollama.test.ts  ollama.ts  router.live.test.ts  runtime.live.test.ts  runtime.test.ts  runtime.ts  tools.test.ts  tools.ts  types.test.ts  types.ts
src/analyzer/: HoverAIInsightCard.css  HoverAIInsightCard.tsx  TreemapCanvas.tsx  treemap.test.ts  treemap.ts
src/bindings/: AggregateDimension.ts  CleanupPlan.ts  CleanupPlanRequest.ts  DismissSuggestionRequest.ts  HardwareProfile.ts  ItemDetails.ts  ItemKind.ts  ItemPage.ts  ItemQuery.ts  ItemRow.ts  ItemSort.ts  LogExcerpt.ts  LogExcerptBatch.ts  LogExcerptRequest.ts  OwnerMatchKind.ts  OwnerSource.ts  OwnerSummary.ts  PathProtectionRequest.ts  PlanActionKind.ts  PlanEdit.ts  PlanItem.ts  PolicyEvidence.ts  PolicyTier.ts  ScanBackend.ts  ScanCoverage.ts  ScanFailure.ts  ScanPhase.ts  ScanProgress.ts  ScanRequest.ts  ScanSummary.ts  ScanTarget.ts  ScanTargetKind.ts  ScanWarning.ts  SortDirection.ts  StorageAggregate.ts  StorageAggregateQuery.ts  StorageBucket.ts  TreemapNode.ts  TreemapQuery.ts  TreemapSlice.ts
