[package]
name = "clutter-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
crossbeam = "0.8.4"
serde = { version = "1", features = ["derive"] }
ts-rs = { version = "12.0.1", features = ["serde-compat"] }

[target.'cfg(windows)'.dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
clutter-protocol = { path = "../clutter-protocol" }
getrandom = "0.4.3"
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
  "Win32_System_Pipes",
  "Win32_System_ProcessStatus",
  "Win32_System_Registry",
  "Win32_System_Threading",
  "Win32_System_WindowsProgramming",
  "Win32_UI_Shell",
] }
