[package]
name = "clutter-scanner-helper"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
bytemuck = { version = "1.25.1", features = ["derive"] }
clutter-protocol = { path = "../clutter-protocol" }
rayon = "1.12.0"
smallvec = "1.15.2"

[target.'cfg(windows)'.dependencies]
ntfs-reader = "0.4.5"
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_System_IO",
  "Win32_System_Ioctl",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
] }
